[gd_scene load_steps=2 format=3 uid="uid://c5qmk2v3nw8df"]

[ext_resource type="Script" path="res://scripts/ui/difficulty_menu.gd" id="1_difficulty"]

[node name="DifficultyMenu" type="CanvasLayer"]
layer = 101
process_mode = 2
script = ExtResource("1_difficulty")

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -130.0
offset_right = 150.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Difficulty"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NormalButton" type="Button" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Normal (Selected)"

[node name="HardButton" type="Button" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Hard"

[node name="StatusLabel" type="Label" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Normal mode: Classic gameplay"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BackButton" type="Button" parent="MenuContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Back"
